load("@rules_java//java:defs.bzl", "java_library")
load("@rules_java//java:java_test.bzl", "java_test")
load("//legend-pure:grammar.bzl", "antlr_gen")
load("//legend-pure:pure_test.bzl", "pure_test")

antlr_gen(
    name = "antlr_gen",
    srcs = glob(["src/main/antlr4/**/*.g4"]) + [
        "//legend-pure/legend-pure-core/legend-pure-m4:grammar_files",
    ],
    tool = "//legend-pure:antlr4_tool",
    visibility = ["//visibility:public"],
)

java_library(
    name = "legend-pure-m2-dsl-path-grammar",
    srcs = [
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/path/NavigationPath.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/path/PathMilestoningDatesVarNamesExtractor.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/path/parser/NavigationGraphBuilder.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/path/parser/NavigationParser.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/path/processor/PathProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/path/unloader/PathUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/path/validation/PathValidator.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/path/validation/PathVisibilityValidator.java",
    ] + [":antlr_gen"],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",
        "@legend_maven//:org_antlr_antlr4_runtime",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "test_utils",
    srcs = [
        "src/test/java/org/finos/legend/pure/m2/inlinedsl/path/AbstractTestMatch.java",
        "src/test/java/org/finos/legend/pure/m2/inlinedsl/path/TestDSLCompilation.java",
        "src/test/java/org/finos/legend/pure/m2/inlinedsl/path/TestPathParsing.java",
        "src/test/java/org/finos/legend/pure/m2/inlinedsl/path/TestVisibilityInPath.java",
        "src/test/java/org/finos/legend/pure/m2/inlinedsl/path/inference/TestFunctionTypeInferenceInPath.java",
        "src/test/java/org/finos/legend/pure/m2/inlinedsl/path/milestoning/TestMilestonedPropertyUsageInFunctonExpressionsWithPath.java",
        "src/test/java/org/finos/legend/pure/m2/inlinedsl/path/milestoning/TestMilestonedPropertyUsageInPaths.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":legend-pure-m2-dsl-path-grammar",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests:RuntimeVerifier_lib",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path:pure_platform_dsl_path_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_test(
    name = "TestMilestonedPropertyUsageInFunctonExpressionsWithPath",
    test_class = "org.finos.legend.pure.m2.inlinedsl.path.milestoning.TestMilestonedPropertyUsageInFunctonExpressionsWithPath",
    runtime_deps = [":test_utils"],
)

java_test(
    name = "TestMilestonedPropertyUsageInPaths",
    test_class = "org.finos.legend.pure.m2.inlinedsl.path.milestoning.TestMilestonedPropertyUsageInPaths",
    runtime_deps = [":test_utils"],
)

java_test(
    name = "TestVisibilityInPath",
    test_class = "org.finos.legend.pure.m2.inlinedsl.path.TestVisibilityInPath",
    runtime_deps = [":test_utils"],
)

java_test(
    name = "TestPathParsing",
    test_class = "org.finos.legend.pure.m2.inlinedsl.path.TestPathParsing",
    runtime_deps = [":test_utils"],
)

pure_test(
    name = "TestPureRuntimePath",
    srcs = ["src/test/java/org/finos/legend/pure/m2/inlinedsl/path/incremental/TestPureRuntimePath.java"],
    compiled_test_deps = ["//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-runtime-java-extension-compiled-dsl-path"],
    test_class = "org.finos.legend.pure.m2.inlinedsl.path.incremental.TestPureRuntimePath",
    deps = [
        ":legend-pure-m2-dsl-path-grammar",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests:RuntimeVerifier_lib",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path:pure_platform_dsl_path_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_test(
    name = "TestDSLCompilation",
    test_class = "org.finos.legend.pure.m2.inlinedsl.path.TestDSLCompilation",
    runtime_deps = [":test_utils"],
)

java_test(
    name = "TestFunctionTypeInferenceInPath",
    test_class = "org.finos.legend.pure.m2.inlinedsl.path.inference.TestFunctionTypeInferenceInPath",
    runtime_deps = [":test_utils"],
)
