load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_library.bzl", "java_library")
load("@rules_java//java:java_test.bzl", "java_test")
load("//tools/build_rules:pure_generation.bzl", "pure_model_generation")

java_library(
    name = "m2-dsl-path-pure-boot",
    srcs = [
        "src/main/java/org/finos/legend/pure/code/core/PathCodeRepositoryProvider.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/path/M2PathPaths.java",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_binary(
    name = "M3CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":m2-dsl-path-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
)

pure_model_generation(
    name = "pure_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    model_name = "Path",
    source_path = "/platform_dsl_path/path.pure",
    tool = ":M3CoreInstanceGenerator",
)

java_library(
    name = "legend-pure-m2-dsl-path-pure",
    srcs = [":pure_gen"],
    visibility = ["//visibility:public"],
    exports = [
        ":m2-dsl-path-pure-boot",
        ":platform_dsl_path_metadata_lib",
    ],
    deps = [
        ":m2-dsl-path-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_test(
    name = "TestM2PathCompiledStateIntegrity",
    srcs = ["src/test/java/org/finos/legend/pure/m2/inlinedsl/path/TestM2PathCompiledStateIntegrity.java"],
    test_class = "org.finos.legend.pure.m2.inlinedsl.path.TestM2PathCompiledStateIntegrity",
    deps = [
        ":legend-pure-m2-dsl-path-pure",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path:pure_platform_dsl_path_par_lib",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "platform_dsl_path_metadata_lib",
    resources = [":platform_dsl_path_metadata"],
    resource_strip_prefix = "legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",
    visibility = ["//visibility:public"],
)

genrule(
    name = "platform_dsl_path_metadata",
    outs = ["metadata/specs/platform_dsl_path.json"],
    cmd = "mkdir -p $$(dirname $@) && echo '{\"name\": \"platform_dsl_path\", \"dependencies\": [\"platform\"]}' > $@",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "compiled_metadata_generator",
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaCodeGeneration",
    runtime_deps = [
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        ":legend-pure-m2-dsl-path-pure",
    ],
    visibility = ["//visibility:public"],
)

load("//legend-pure/legend-pure-core/legend-pure-m3-core:pure.bzl", "pure_compiled_metadata_gen")

pure_compiled_metadata_gen(
    name = "platform_dsl_path_compiled_graph",
    srcs = glob(["src/main/resources/**/*"]),
    out = "platform_dsl_path_compiled_metadata.jar",
    module_name = "platform_dsl_path",
    tool = ":compiled_metadata_generator",
    visibility = ["//visibility:public"],
)

java_import(
    name = "platform_dsl_path_compiled_graph_import",
    jars = [":platform_dsl_path_compiled_metadata.jar"],
    visibility = ["//visibility:public"],
)
